# TEST02

./: .gitignore  CMakeLists.txt  main.cpp
Res/: lena.txt
